Reply textarea fixes
* Adding padding to textarea causes the resize grabber & scrollbar in FF to be
  positioned badly
* Include textarea padding in setting textarea height for auto-expand
* Removed unused class "flow-input"

--- a/modules/discussion/styles/topic.less
+++ b/modules/discussion/styles/topic.less
@@ -212,7 +212,6 @@
 	&:not(:active) {
 		.flow-topic-reply-content:empty:not(:focus) {
 			height: 34px;
-			padding-top: 6px;
 		}
 	}
 }
